# Wildchat1M-clustering

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
__marimo__/session/: tokenization_contest.py.json
code/: first.py
scripts/: clustering.py  explo_nb.py  first.py  flat_notebook_toworkon.py  nb_prep_clean.py  nb_tokenization_contest.py  sentence_embedding_transformers.py
scripts/__marimo__/session/: aggregation_speed_contest.py.json  clustering.py.json  explo_nb.py.json  nb_prep_clean.py.json
scripts/benchmarks/: lemma_dict_benchmark.py  monitor_ram_usage.py  nb_aggregation_speed_contest.py
scripts/benchmarks/__marimo__/session/: lemma_dict_benchmark.py.json
