[project]
name = "wildchat-1mm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=6.0.0",
    "duckdb>=1.4.0",
    "marimo>=0.17.7",
    "matplotlib>=3.10.6",
    "nltk>=3.9.2",
    "numpy>=2.3.3",
    "pip>=25.3",
    "polars[plot,pyarrow]>=1.31.0",
    "pyarrow>=21.0.0",
    "pytz>=2025.2",
    "ruff>=0.14.4",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "simplemma>=1.1.2",
    "spacy>=3.8.9",
    "sqlglot>=27.29.0",
    "wordcloud>=1.9.4",
]
